Rename the injector to SynInjector, we will change the binary name of the injector

--- a/SynClient/SynClient.vcxproj
+++ b/SynClient/SynClient.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{48141a88-4f29-4ecb-8bdb-1ee470316484}</ProjectGuid>
     <RootNamespace>SynClient</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>SynInjector</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
