--- a/Injector/UwpInjector.vcxproj
+++ b/Injector/UwpInjector.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{48141a88-4f29-4ecb-8bdb-1ee470316484}</ProjectGuid>
-    <RootNamespace>SynClient</RootNamespace>
+    <RootNamespace>UwpInjector</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
     <ProjectName>Injector</ProjectName>
   </PropertyGroup>
